Replacing URL with URI, as it is cleaner, and as it better fit in the SE needs